<resources>
    <string name="app_name">MixBar</string>
    <string name="tab_text_1">Коктейли</string>
    <string name="tab_text_2">Ингредиенты</string>
    <string name="title_activity_cocktail">@string/app_name</string>
    <string name="first_fragment_label">@string/app_name</string>
    <string name="second_fragment_label">@string/app_name</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="menuTitle">Settings</string>
    <string name="cocktailMenuTitle">Настройки</string>
    <string name="title_activity_ingredient">@string/app_name</string>
    <string name="title_activity_my_ingredients">@string/app_name</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="cocktails_hint">Название коктейля</string>
    <string name="ingredients_hint">Название ингредиента</string>
    <string name="cocktailsByIngredientsButton">Коктейли из моих ингредиентов</string>
    <string name="myIngredientsTitle">Мои ингредиенты</string>
    <string name="myIngredientsButton">Мои ингредиенты</string>
    <string name="myCocktailsTitle">Мои коктейли</string>
    <string name="myCocktailsButton">Мои коктейли</string>
    <string name="cocktailDescriptionHeader">Что рассказать о коктейле?</string>
    <string name="tools">Штучки</string>
    <string name="ingredients">Ингредиенты</string>
    <string name="receipt">Как приготовить?</string>
    <string name="internetError">Отсутствует подключение к интернету</string>
    <string name="myShopListTitle">Список покупок</string>
    <string name="myShopListButton">Список покупок</string>
    <string name="cocktailConstruct">Конструктор коктейлей</string>
    <string name="saveCocktail">Сохранить коктейль</string>

    <string name="open">Открыть</string>
    <string name="close">Закрыть</string>
    <string name="cocktail_instructions">Рецепт приготовления.\nВводите каждый шаг\nс новой строки\nбез нумерования
    </string>
    <string name="cocktail_description_hint">Описание коктейля\n(можно оставить пустым)</string>
    <string name="cocktail_tags_hint">Тэги (вводите через пробел)</string>
    <string name="insert_tool">Прикрепить штучку</string>
    <string name="insert_ingredient">Прикрепить ингредиент</string>
    <string name="insert_image">Прикрепить изображение</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="units">
        <item>мл</item>
        <item>г</item>
        <item>шт</item>
    </string-array>
</resources>