<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center_vertical"
    tools:context=".cocktail.construct.CocktailConstructActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

            <LinearLayout
                android:id="@+id/commonLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:visibility="gone"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/cocktailName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:ems="10"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="65dp"
                    android:layout_marginRight="65dp"
                    android:inputType="text"
                    android:theme="@style/Autocomplete"
                    android:hint="@string/cocktails_hint"
                    android:background="@drawable/rounded_corner"/>

                <androidx.cardview.widget.CardView
                    android:id="@+id/addPreview"
                    android:layout_gravity="center"
                    android:layout_width="350dp"
                    android:layout_height="150dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="5dp">

                    <ImageView
                        android:layout_gravity="center"
                        android:id="@+id/cocktailPreview"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/dotted"
                        />

                    <ImageView
                        android:layout_gravity="center"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_baseline_add_circle_outline_24"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="Прикрепить превью"
                        android:layout_gravity="bottom|center_horizontal"/>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/addCard"
                    android:layout_gravity="center"
                    android:layout_width="350dp"
                    android:layout_height="150dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="5dp">

                    <ImageView
                        android:layout_gravity="center"
                        android:id="@+id/cocktailImage"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/dotted"
                        />

                    <ImageView
                        android:layout_gravity="center"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_baseline_add_circle_outline_24"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/insert_image"
                        android:layout_gravity="bottom|center_horizontal"/>


                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/cocktailReceiptTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:textSize="@dimen/headerSize"
                    android:text="@string/receipt" />

                <EditText
                    android:id="@+id/cocktailInstructions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minWidth="300dp"
                    android:minHeight="50dp"
                    android:textAlignment="center"
                    android:ems="10"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="65dp"
                    android:layout_marginRight="65dp"
                    android:inputType="textMultiLine"
                    android:theme="@style/Autocomplete"
                    android:hint="@string/cocktail_instructions"
                    android:background="@drawable/rounded_corner"/>

                <TextView
                    android:id="@+id/ingredientsTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:textSize="@dimen/headerSize"
                    android:text="@string/ingredients"
                    />

                <LinearLayout
                    android:id="@+id/cocktailIngredients"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:animateLayoutChanges="true"
                    android:orientation="vertical" >

                    <androidx.cardview.widget.CardView
                        android:id="@+id/addIngredient"
                        android:layout_gravity="center"
                        android:layout_width="350dp"
                        android:layout_height="150dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginBottom="5dp"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="5dp">

                        <ImageView
                            android:layout_gravity="center"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/dotted"
                            />

                        <ImageView
                            android:layout_gravity="center"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/ic_baseline_add_circle_outline_24"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:text="@string/insert_ingredient"
                            android:layout_gravity="bottom|center_horizontal"/>


                    </androidx.cardview.widget.CardView>

                </LinearLayout>

                <TextView
                    android:id="@+id/toolsTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:textSize="@dimen/headerSize"
                    android:text="@string/tools" />

                <LinearLayout
                    android:id="@+id/cocktailTools"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/addTool"
                        android:layout_gravity="center"
                        android:layout_width="350dp"
                        android:layout_height="150dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginBottom="5dp"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="5dp">

                        <ImageView
                            android:layout_gravity="center"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/dotted"
                            />

                        <ImageView
                            android:layout_gravity="center"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/ic_baseline_add_circle_outline_24"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:text="@string/insert_tool"
                            android:layout_gravity="bottom|center_horizontal"/>


                    </androidx.cardview.widget.CardView>

                </LinearLayout>

                <TextView
                    android:id="@+id/descriptionHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:textSize="@dimen/headerSize"
                    android:visibility="gone"
                    android:text="@string/cocktailDescriptionHeader" />

                <EditText
                    android:id="@+id/cocktailDescription"
                    android:layout_gravity="center"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:inputType="textMultiLine"
                    android:theme="@style/Autocomplete"
                    android:hint="@string/cocktail_description_hint"
                    android:background="@drawable/rounded_corner"/>

                <EditText
                    android:id="@+id/cocktailTags"
                    android:layout_gravity="center"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:inputType="textMultiLine"
                    android:theme="@style/Autocomplete"
                    android:hint="@string/cocktail_tags_hint"
                    android:background="@drawable/rounded_corner"/>

                <Button
                    android:id="@+id/saveCocktailButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/primary"
                    android:textColor="@color/white"
                    android:text="@string/saveCocktail" />

            </LinearLayout>

    </LinearLayout>

</ScrollView>